[metadata]
name = mavis
version = 2.2.10
url = https://github.com/bcgsc/mavis.git
download_url = https://github.com/bcgsc/mavis/archive/v2.2.10.tar.gz
description = A Structural Variant Post-Processing Package
author_email = creisle@bcgsc.ca
author = Caralyn Reisle
maintainer_email = mavis@bcgsc.ca
maintainer = mavis
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
project_urls = mavis = http://mavis.bcgsc.ca

[bdist_wheel]
universal = 1

[pycodestyle]
ignore = E501
    W503
    E203
statistics = True

[flake8]
ignore = E501
    W503
    E203

[options]
packages = find:
python_requires = >=3.2
dependency_links = []
include_package_data = True
install_requires =
    Distance>=0.1.3
    Shapely>=1.6.4.post1
    biopython>=1.70, <1.78
    braceexpand==0.1.2
    colour
    networkx>=2.5,<3
    numpy>=1.13.1
    pysam
    shortuuid>=0.5.0
    svgwrite
setup_requires =
    pip>=9.0.0
    setuptools>=36.0.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
doc =
    mkdocs==1.1.2
    markdown-refdocs
    mkdocs-material==5.4.0
    markdown-include
    mkdocs-simple-hooks==0.1.2
test =
    timeout-decorator>=0.3.3
    coverage>=4.2
    pycodestyle>=2.3.1
    pytest
    pytest-cov
dev =
    black
    flake8
    twine
    wheel
    timeout-decorator>=0.3.3
    coverage>=4.2
    pycodestyle>=2.3.1
    pytest
    pytest-cov
    mkdocs==1.1.2
    markdown-refdocs
    mkdocs-material==5.4.0
    markdown-include
    mkdocs-simple-hooks==0.1.2
deploy =
    twine
    wheel
tools =
    pyensembl
    simplejson

[options.entry_points]
console_scripts =
    mavis = mavis.main:main
    calculate_ref_alt_counts = tools.calculate_ref_alt_counts:main
